# Simpute

./: .gitignore  LICENSE  README.md  masked.csv  pyproject.toml  run.py
.github/workflows/: release.yml
Assets/Plots/: README.md
scripts/: generate_plots.py
simpute/: __init__.py  core.py  models.py  utils.py
tests/: __init__.py  guard.py  mask.py
tests/data/: README.md  test.csv
