[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpute"
version = "0.1.1"
description = "Smart Impute: adaptive per-column missing value imputation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Hvllvix"}]
maintainers = [{name = "Hvllvix"}]
keywords = ["imputation", "missing-data", "machine-learning", "sklearn", "simpute"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "lightgbm>=4.0",
    "catboost>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7", "seaborn>=0.13"]

[project.urls]
Homepage = "https://github.com/Hvllvix/Simpute"
Repository = "https://github.com/Hvllvix/Simpute"
Documentation = "https://github.com/Hvllvix/Simpute#readme"
"Bug Tracker" = "https://github.com/Hvllvix/Simpute/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["simpute*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["guard.py", "test_*.py"]
